# HandleLib

./: CMakeLists.txt  README.md
inc/: Handle.h  m_Assert.h
src/: Handle.c
test/src/: main.c
